--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <!-- <link rel="stylesheet" type="text/css" href="queries.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
         integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
@@ -24,21 +24,19 @@
     <div id="showcase">
         <header>
             <nav class='cf fill'>
+                <a href="index.html" class="pull-left"><img height="50px" width="70px" src="./images/logo_1.png"></a>
                 <ul class='cf'>
-                    <li class="hide-on-small">
+                    <!-- <li class="hide-on-small">
                         <a href='#showcase'>WeTrack</a>
+                    </li> -->
+                    <li>
+                        <a href='resource.html'>Resource</a>
                     </li>
                     <li>
-                        <a href='#resource'>Resource</a>
+                        <a href='addgoal.html'>Set Goal</a>
                     </li>
                     <li>
-                        <a href='#set-goal'>Set Goal</a>
-                    </li>
-                    <li>
-                        <a href='#view-goal'>View Goal</a>
-                    </li>
-                    <li>
-                        <a href='#team'>Team</a>
+                        <a href='Team.html'>Team</a>
                     </li>
                 </ul>
                 <a href='#' id='openup'>WeTrack</a>
@@ -46,12 +44,13 @@
         </header>
 
         <!-- main matter -->
+
         <div class="section-main container">
-            <h1 style="font-size: 6rem;" class="animate__animated animate__backInLeft ">WeTrack</h1>
-            <h2 style="font-size: 3rem;" class="animate__animated animate__backInRight animate__delay-1s">Let's
+            <h1 style="font-size: 6rem;">WeTrack</h1>
+            <h2 style="font-size: 3rem;">Let's
                 Track
                 it!</h2>
-            <p class="lead hide-on-small animate__animated animate__bounceInUp animate__delay-3s"
+            <p class="lead hide-on-small animate__animated animate__bounceInUp animate__delay-1s"
                 style="font-size:2rem;">Begin
                 setting your goals keeping the end in mind
                 makes the journey smooth and
@@ -65,8 +64,8 @@
         <!-- buttons -->
         <div class="buttons">
             <div class="vertical-center">
-                <a class="btn btn-full " href="./addgoal.html" style="font-size: 2rem;">Set Goal</a>
-                <a class="btn btn-ghost" href="./addgoal.html" style="font-size: 2rem;">View Goal</a>
+                <a class="btn btn-full " href="addgoal.html" style="font-size: 2rem;">Set Goal</a>
+                <a class="btn btn-ghost" href="addgoal.html" style="font-size: 2rem;">View Goal</a>
             </div>
         </div>
 
@@ -131,11 +130,10 @@
             <!-- footer nav -->
             <div class="footer-nav">
                 <h4>Useful links <i class="fas fa-angle-double-down"></i></h4>
-                <a href="#Showcase">Home</a>
-                <a href="#resource">Resource</a>
-                <a href="#set-goal">Set Goal</a>
-                <a href="#view-goal">View Goal</a>
-                <a href="#team">Team</a>
+                <a href="index.html">Home</a>
+                <a href="resource.html">Resource</a>
+                <a href="addgoal.html">Set Goal</a>
+                <a href="Team.html">Team</a>
             </div>
             <!-- copyright -->
             <div class="main-footer">
